Rework layout for optimal chrome extensionage

--- a/index.html
+++ b/index.html
@@ -1,32 +1,2 @@
-<script src="/socket.io/socket.io.js"></script>
-<script>
-var pebblePresenter = {
-	init: function(){
-		// Initialize the socket connection
-		var socket = io.connect();
-		pebblePresenter.data = {
-			page_url: document.URL,
-			pebble_auth: null,
-		}
-
-		socket.emit('registerPresentation', pebblePresenter.data);
-
-		socket.on('presentationInfo', function(data){
-			pebblePresenter.log(data);
-		});
-
-		socket.on('changeSlide', function(data){
-			pebblePresenter.log(data);
-		});
-	},
-
-	log: function( data ) {
-		var elem = document.getElementById('msg');
-		elem.innerHTML = '<li>'+JSON.stringify(data)+'</li>' + elem.innerHTML;
-	}
-};
-
-pebblePresenter.init();
-</script>
-
-<ul id="msg" style="border: 1px solid #000; background: #eee; width: 500px; word-wrap: break-word"></ul>
+Hello World!<br />
+More info about this project will be coming soon.
